# powerview

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  README.md  create_analytics_db.py  index.html  metering_points.example  metering_points.yml.example  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  verify.py
.github/workflows/: ci.yml  mkdocs-deploy.yml
data-and-storage/: index.html
development/: index.html
docs/: data-and-storage.md  development.md  getting-started.md  index.md  initial-setup.md  reference.md  superset.md
getting-started/: index.html
initial-setup/: index.html
powerview/src/: api_client.py  auth.py  config.py  extract.py  main.py  metadata.py  prices_api_client.py  reporting.py  storage.py
powerview/tests/: test_api_client.py  test_auth.py  test_config.py  test_extract.py  test_main.py  test_metadata.py  test_prices_api_client.py  test_reporting.py  test_storage.py
reference/: index.html
search/: search_index.json
superset/: .env.example  .env.sample  Dockerfile  docker-compose.yml  index.html
